# Wols_CA_OutlookInboxManager

./: CMakeLists.txt
Wols_CA_OutlookInboxManager/: Wols_CA_InboxManagerLanguage.json  Wols_CA_OutlookInboxManager.cpp  Wols_CA_OutlookInboxManager.hpp  resource.h  resource.rc
